[gd_scene load_steps=10 format=2]

[ext_resource path="res://Elements.tres" type="TileSet" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/board1.png" type="Texture" id=3]
[ext_resource path="res://Level16.gd" type="Script" id=4]
[ext_resource path="res://mainmenu2.mp3" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 12 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 28 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[node name="Level16" type="Node2D"]
script = ExtResource( 4 )

[node name="Board1" type="Sprite" parent="."]
position = Vector2( 180, 180 )
scale = Vector2( 0.330808, 0.331267 )
texture = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 20, 20 )
cell_custom_transform = Transform2D( 20, 0, 0, 64, 0, 0 )
format = 1
tile_data = PoolIntArray( -65538, 10, 0, -65537, 10, 0, -131072, 10, 0, -131071, 10, 0, -131070, 10, 0, -131069, 10, 0, -131068, 10, 0, -131067, 10, 0, -131066, 10, 0, -131065, 10, 0, -131064, 10, 0, -131063, 10, 0, -131062, 10, 0, -131061, 10, 0, -131060, 10, 0, -131059, 10, 0, -131058, 10, 0, -131057, 10, 0, -131056, 10, 0, -131055, 10, 0, -131054, 10, 0, -131053, 10, 0, -2, 10, 0, -65517, 10, 0, 65534, 10, 0, 0, 10, 0, 1, 10, 0, 2, 10, 0, 3, 10, 0, 4, 10, 0, 5, 10, 0, 6, 10, 0, 7, 10, 0, 8, 10, 0, 9, 10, 0, 10, 10, 0, 11, 10, 0, 12, 10, 0, 13, 10, 0, 14, 10, 0, 15, 10, 0, 16, 10, 0, 17, 10, 0, 19, 10, 0, 131070, 10, 0, 65536, 10, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 10, 0, 65555, 10, 0, 196606, 10, 0, 131072, 10, 0, 131073, 1, 0, 131075, 1, 0, 131077, 3, 0, 131079, 1, 0, 131084, 3, 0, 131086, 1, 0, 131088, 1, 0, 131089, 10, 0, 131091, 10, 0, 262142, 10, 0, 196608, 10, 0, 196609, 1, 0, 196613, 3, 0, 196620, 3, 0, 196624, 1, 0, 196625, 10, 0, 196627, 10, 0, 327678, 10, 0, 262144, 10, 0, 262145, 1, 0, 262146, 1, 0, 262149, 3, 0, 262154, 1, 0, 262156, 3, 0, 262160, 1, 0, 262161, 10, 0, 262163, 10, 0, 393214, 10, 0, 327680, 10, 0, 327681, 1, 0, 327682, 3, 0, 327683, 3, 0, 327684, 3, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 3, 0, 327694, 3, 0, 327695, 3, 0, 327696, 1, 0, 327697, 10, 0, 327699, 10, 0, 458750, 10, 0, 393216, 10, 0, 393217, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393232, 1, 0, 393233, 10, 0, 393235, 10, 0, 524286, 10, 0, 458752, 10, 0, 458753, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458760, 10, 0, 458762, 3, 0, 458764, 1, 0, 458768, 1, 0, 458769, 10, 0, 458771, 10, 0, 589822, 10, 0, 524288, 10, 0, 524289, 1, 0, 524293, 1, 0, 524294, 1, 0, 524296, 9, 0, 524298, 3, 0, 524303, 1, 0, 524304, 1, 0, 524305, 10, 0, 524307, 10, 0, 655358, 10, 0, 589824, 10, 0, 589825, 1, 0, 589826, 1, 0, 589829, 1, 0, 589830, 1, 0, 589834, 3, 0, 589840, 1, 0, 589841, 10, 0, 589843, 10, 0, 720894, 10, 0, 655360, 10, 0, 655361, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 10, 0, 655379, 10, 0, 786430, 10, 0, 720896, 10, 0, 720897, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 10, 0, 720915, 10, 0, 851966, 10, 0, 786432, 10, 0, 786433, 1, 0, 786434, 3, 0, 786435, 3, 0, 786436, 3, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 10, 0, 786451, 10, 0, 917502, 10, 0, 851968, 10, 0, 851969, 1, 0, 851972, 1, 0, 851973, 3, 0, 851977, 3, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 10, 0, 851987, 10, 0, 983038, 10, 0, 917504, 10, 0, 917505, 1, 0, 917506, 1, 0, 917509, 3, 0, 917513, 3, 0, 917515, 11, 0, 917517, 1, 0, 917518, 10, 0, 917519, 10, 0, 917520, 10, 0, 917521, 10, 0, 917523, 10, 0, 1048574, 10, 0, 983040, 10, 0, 983041, 1, 0, 983045, 3, 0, 983048, 1, 0, 983049, 3, 0, 983053, 1, 0, 983054, 10, 0, 983055, 11, 0, 983057, 10, 0, 983059, 10, 0, 1114110, 10, 0, 1048576, 10, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 10, 0, 1048592, 8, 0, 1048593, 10, 0, 1048595, 10, 0, 1179646, 10, 0, 1114112, 10, 0, 1114113, 10, 0, 1114114, 10, 0, 1114115, 10, 0, 1114116, 10, 0, 1114117, 10, 0, 1114118, 10, 0, 1114119, 10, 0, 1114120, 10, 0, 1114121, 10, 0, 1114122, 10, 0, 1114123, 10, 0, 1114124, 10, 0, 1114125, 10, 0, 1114126, 10, 0, 1114127, 10, 0, 1114128, 10, 0, 1114129, 10, 0, 1114131, 10, 0, 1245182, 10, 0, 1179667, 10, 0, 1310718, 10, 0, 1310719, 10, 0, 1245184, 10, 0, 1245185, 10, 0, 1245186, 10, 0, 1245187, 10, 0, 1245188, 10, 0, 1245189, 10, 0, 1245190, 10, 0, 1245191, 10, 0, 1245192, 10, 0, 1245193, 10, 0, 1245194, 10, 0, 1245195, 10, 0, 1245196, 10, 0, 1245197, 10, 0, 1245198, 10, 0, 1245199, 10, 0, 1245200, 10, 0, 1245201, 10, 0, 1245202, 10, 0, 1245203, 10, 0, 11665566, 5, 0 )

[node name="Camera2D" type="Camera2D" parent="TileMap"]
position = Vector2( 180, 180 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 172, 172 )

[node name="Exit" type="Area2D" parent="."]
position = Vector2( 300, 0 )

[node name="Exit" type="CollisionShape2D" parent="Exit"]
position = Vector2( 32, 332 )
shape = SubResource( 1 )

[node name="Screen" type="Area2D" parent="."]

[node name="Screen" type="CollisionShape2D" parent="Screen"]
position = Vector2( 212, 172 )
shape = SubResource( 2 )

[node name="Screen2" type="Area2D" parent="."]

[node name="Screen" type="CollisionShape2D" parent="Screen2"]
position = Vector2( 292, 112 )
rotation = -1.57079
shape = SubResource( 2 )

[node name="Screen3" type="Area2D" parent="."]
position = Vector2( -40, -40 )

[node name="Screen" type="CollisionShape2D" parent="Screen3"]
position = Vector2( 292, 112 )
rotation = -3.14159
shape = SubResource( 2 )

[node name="Screen4" type="Area2D" parent="."]
position = Vector2( -180, -40 )

[node name="Screen" type="CollisionShape2D" parent="Screen4"]
position = Vector2( 292, 112 )
rotation = -3.14159
shape = SubResource( 2 )

[node name="Screen5" type="Area2D" parent="."]
position = Vector2( -230, -4 )

[node name="Screen" type="CollisionShape2D" parent="Screen5"]
position = Vector2( 302, 116 )
rotation = -4.71238
shape = SubResource( 2 )

[node name="Screen6" type="Area2D" parent="."]
position = Vector2( -230, 136 )

[node name="Screen" type="CollisionShape2D" parent="Screen6"]
position = Vector2( 302, 116 )
rotation = -4.71238
shape = SubResource( 2 )

[node name="Screen7" type="Area2D" parent="."]
position = Vector2( -175, 179 )

[node name="Screen" type="CollisionShape2D" parent="Screen7"]
position = Vector2( 287, 113 )
rotation = -6.28318
shape = SubResource( 2 )

[node name="Screen8" type="Area2D" parent="."]
position = Vector2( -95, 179 )

[node name="Screen" type="CollisionShape2D" parent="Screen8"]
position = Vector2( 287, 113 )
rotation = -6.28318
shape = SubResource( 2 )

[node name="Damage" type="Area2D" parent="."]

[node name="Damage" type="CollisionPolygon2D" parent="Damage"]
polygon = PoolVector2Array( 259, 104, 259, 140, 140, 140, 140, 203, 320, 202, 343, 203, 342, 283, 285, 282, 280, 346, 265, 343, 264, 259, 105, 259, 105, 104 )

[node name="Damage2" type="CollisionPolygon2D" parent="Damage"]
polygon = PoolVector2Array( 259, 325, 259, 340, 21, 340, 8, 123, 18, 10, 350, 11, 350, 205, 324, 203, 324, 41, 39, 41, 39, 325 )

[node name="Damage3" type="CollisionShape2D" parent="Damage"]
position = Vector2( 252, 152 )
shape = SubResource( 3 )

[node name="Damage4" type="CollisionShape2D" parent="Damage"]
position = Vector2( 312, 172 )
shape = SubResource( 3 )

[node name="Damage5" type="CollisionShape2D" parent="Damage"]
position = Vector2( 292, 52 )
shape = SubResource( 3 )

[node name="Damage6" type="CollisionShape2D" parent="Damage"]
position = Vector2( 212, 92 )
shape = SubResource( 3 )

[node name="Damage7" type="CollisionShape2D" parent="Damage"]
position = Vector2( 152, 52 )
shape = SubResource( 3 )

[node name="Damage8" type="CollisionShape2D" parent="Damage"]
position = Vector2( 72, 52 )
shape = SubResource( 3 )

[node name="Damage9" type="CollisionShape2D" parent="Damage"]
position = Vector2( 52, 92 )
shape = SubResource( 3 )

[node name="Damage10" type="CollisionShape2D" parent="Damage"]
position = Vector2( 92, 152 )
shape = SubResource( 3 )

[node name="Damage11" type="CollisionShape2D" parent="Damage"]
position = Vector2( 52, 192 )
shape = SubResource( 3 )

[node name="Damage12" type="CollisionShape2D" parent="Damage"]
position = Vector2( 92, 232 )
shape = SubResource( 3 )

[node name="Damage13" type="CollisionShape2D" parent="Damage"]
position = Vector2( 52, 292 )
shape = SubResource( 3 )

[node name="Damage14" type="CollisionShape2D" parent="Damage"]
position = Vector2( 92, 272 )
shape = SubResource( 3 )

[node name="Damage16" type="CollisionShape2D" parent="Damage"]
position = Vector2( 172, 312 )
shape = SubResource( 3 )

[node name="Teleporter" type="Area2D" parent="." groups=["Portal2"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Teleporter"]
position = Vector2( 232, 292 )
shape = SubResource( 4 )

[node name="musicbakcground" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -11.362
pitch_scale = 0.51
autoplay = true

[connection signal="body_entered" from="Exit" to="." method="_on_Exit_body_entered"]
[connection signal="body_entered" from="Screen" to="." method="_on_Screen_body_entered"]
[connection signal="body_entered" from="Screen2" to="." method="_on_Screen2_body_entered"]
[connection signal="body_entered" from="Screen3" to="." method="_on_Screen3_body_entered"]
[connection signal="body_entered" from="Screen4" to="." method="_on_Screen4_body_entered"]
[connection signal="body_entered" from="Screen5" to="." method="_on_Screen5_body_entered"]
[connection signal="body_entered" from="Screen6" to="." method="_on_Screen6_body_entered"]
[connection signal="body_entered" from="Screen7" to="." method="_on_Screen7_body_entered"]
[connection signal="body_entered" from="Screen8" to="." method="_on_Screen8_body_entered"]
[connection signal="body_entered" from="Damage" to="." method="_on_Damage_body_entered"]
